# drone-autopilot

./: .gitignore  README.md  kalman_analysis.m
GC_Drone/: .gitignore
GC_Drone/devel/: .catkin  local_setup.sh
GC_Drone/devel/include/estimator/: imu_data.h
GC_Drone/devel/lib/estimator/: estimator
GC_Drone/devel/lib/imu/: imu
GC_Drone/devel/lib/pkgconfig/: IMU.pc  controls.pc  (+3 more)
GC_Drone/src/controls/: CMakeLists.txt  package.xml
GC_Drone/src/controls/include/: ADC_Navio.h  ADC_Navio2.cpp  ADC_Navio2.h  CMakeLists.txt  Led_Navio.h  RCInput_Navio.cpp  RCInput_Navio2.h  RCOutput_Navio.h
GC_Drone/src/controls/include/eigen/build_dir/: cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/bench/spbench/: CTestTestfile.cmake
GC_Drone/src/controls/include/eigen/build_dir/blas/testing/: CTestTestfile.cmake  Makefile
GC_Drone/src/controls/include/eigen/build_dir/demos/opengl/: CTestTestfile.cmake
GC_Drone/src/controls/include/eigen/build_dir/doc/: cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/doc/examples/: Makefile
GC_Drone/src/controls/include/eigen/build_dir/doc/special_examples/: Makefile
GC_Drone/src/controls/include/eigen/build_dir/language_tests/Fortran/: CMakeCache.txt  Makefile
GC_Drone/src/controls/include/eigen/build_dir/lapack/: Makefile  cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/test/: cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/unsupported/: cmake_install.cmake
GC_Drone/src/controls/include/eigen/build_dir/unsupported/Eigen/: Makefile
GC_Drone/src/controls/include/eigen/build_dir/unsupported/Eigen/CXX11/: CTestTestfile.cmake
GC_Drone/src/controls/include/eigen/build_dir/unsupported/doc/: CTestTestfile.cmake
GC_Drone/src/controls/include/eigen/build_dir/unsupported/doc/examples/: Makefile
GC_Drone/src/controls/include/eigen/build_dir/unsupported/doc/snippets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
GC_Drone/src/controls/src/: controller.cpp  controller.h  motor_calibration.cpp  top_level_controller.cpp  top_level_controller.h
GC_Drone/src/controls/src/header-files/: RCOutput_Navio2.h
GC_Drone/src/estimator/: CMakeLists.txt  package.xml
GC_Drone/src/estimator/include/eigen/build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  buildtests.sh  cdashtesting.cmake  install_manifest.txt
GC_Drone/src/estimator/include/eigen/build_dir/Eigen/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/bench/spbench/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/blas/testing/: cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/demos/: CTestTestfile.cmake  Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/demos/mandelbrot/: CTestTestfile.cmake  Makefile  cmake_install.cmake  mandelbrot.moc_parameters
GC_Drone/src/estimator/include/eigen/build_dir/demos/opengl/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/doc/: Doxyfile  Makefile
GC_Drone/src/estimator/include/eigen/build_dir/doc/examples/: cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/doc/snippets/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/doc/special_examples/: cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/language_tests/Fortran/: cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/lapack/: CTestTestfile.cmake
GC_Drone/src/estimator/include/eigen/build_dir/test/: CTestTestfile.cmake  Makefile
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/: CTestTestfile.cmake  Makefile
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/Eigen/: CTestTestfile.cmake  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/Eigen/CXX11/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/doc/: Makefile  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/doc/examples/: CTestTestfile.cmake  cmake_install.cmake
GC_Drone/src/estimator/include/eigen/build_dir/unsupported/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
GC_Drone/src/estimator/msg/: barometer_data.msg  gps_data.msg  human_inputs.msg  imu_data.msg  motor_commands.msg  quad_rotor_states.msg
GC_Drone/src/estimator/src/: estimator.cpp  estimator.h  filter.cpp  filter.h  quad_rotor_model.cpp  quad_rotor_model.h
GC_Drone/src/sensors/: CMakeLists.txt  package.xml
base-station/src/desktop_remote/: desktop_control.cpp  joystick.cpp  joystick.h  makefile
rt-drone/: .gitignore  CMakeLists.txt  main  main.cpp  makefile  motor_calibration.cpp
rt-drone/controls/: CMakeLists.txt
rt-drone/controls/inc/: pid.h  quad_rotor_controller.h
rt-drone/controls/inc/eigen/build_dir/: Eigen3Targets.cmake
rt-drone/controls/inc/eigen/build_dir/demos/opengl/: quaternion_demo.moc_parameters
rt-drone/controls/inc/eigen/build_dir/doc/: Doxyfile-unsupported
rt-drone/controls/src/: pid.cpp  quadrotor_controller.cpp
rt-drone/device-drivers/: CMakeLists.txt
rt-drone/device-drivers/inc/: Led_Navio2.h  RCInput_Navio.h  RGBled.h
rt-drone/device-drivers/src/: RCInput_Navio.cpp  RCInput_Navio2.cpp
rt-drone/estimation/: CMakeLists.txt
rt-drone/estimation/inc/: AHRS.h
rt-drone/estimation/src/: AHRS.cpp
rt-drone/modules/: control_ops.cpp
rt-drone/modules/inc/: communication.h  control_ops.h  estimator.h
rt-drone/modules/src/: communication.cpp  control_ops.cpp  estimator.cpp
rt-drone/util/inc/: constants.h  logger_class.h  thread_helpers.h
rt-drone/util/src/: logger_class.cpp  thread_helpers.cpp
(+24 files in other folders)
